# nlp-fq

./: .gitignore  README.md  main.py  pyproject.toml
desafios/desafio01/: Desafio_1.ipynb
desafios/desafio02/: Desafio_2.ipynb  Resolucion_Desafio_2.ipynb  corpus_tres_cuerpos.txt  word2vec_tres_cuerpos.model
desafios/desafio03/: Desafio_3_Resolucion.ipynb
desafios/desafio04/: Desafio_4_.ipynb  Traductor.ipynb
