[project]
name = "nlp-fq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
]
