[project]
name = "nlp-fq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "datasets>=4.8.5",
    "gensim>=4.3.0",
    "gradio>=5.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "spacy>=3.8.14",
    "tensorflow-cpu>=2.18.0",
]
